manifests/2048/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048deployment
  namespace: "2048-game"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 2
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: alexwhen/docker-2048
        name: "2048"
        ports:
        - containerPort: 80
