manifests/2048/gslb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hub.traefik.io/enable-acme: "true"
  name: 2048game-gslb
  namespace: "2048-game"
spec:
  ingressClassName: traefik
  rules:
  - host: 2048.gslb.blah.cloud
    http:
      paths:
      - backend:
          service:
            name: game-2048
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 2048.gslb.blah.cloud
    secretName: 2048-gslb-cert
