manifests/2048/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
  name: 2048game
  namespace: "2048-game"
spec:
  ingressClassName: traefik
  rules:
  - host: 2048.apps.blah.cloud
    http:
      paths:
      - backend:
          service:
            name: 2048game
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 2048.apps.blah.cloud
    secretName: 2048-cert
